More protection against broken XCF files

BUG: 242518

David, if the offending file is not broken, but loads fine in GIMP,
please attach it. It is possible that there is some wired format that
KDE does not handle yet.

svn path=/trunk/KDE/kdelibs/; revision=1142443